--- a/src/Flipkart/Flipkart/Flipkart.csproj
+++ b/src/Flipkart/Flipkart/Flipkart.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
+  </ItemGroup>
+
 </Project>
