--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@
 /src/Flipkart/Flipkart/obj/Release/net6.0/staticwebassets.development.json
 /src/Flipkart/Flipkart/obj/staticwebassets.pack.sentinel
 /.vs/slnx.sqlite
+/src/Flipkart/Flipkart/obj/Release/net6.0/Flipkart.csproj.CopyComplete
+/src/Flipkart/Flipkart/obj/Debug/net6.0/staticwebassets.development.json
+/src/Flipkart/Flipkart/obj/Debug/net6.0/staticwebassets.build.json
+/src/Flipkart/Flipkart/obj/Debug/net6.0/scopedcss/projectbundle/Flipkart.bundle.scp.css
+/src/Flipkart/Flipkart/obj/Debug/net6.0/scopedcss/Pages/Shared/_Layout.cshtml.rz.scp.css
+/src/Flipkart/Flipkart/obj/Debug/net6.0/scopedcss/bundle/Flipkart.styles.css
+/src/Flipkart/Flipkart/obj/Debug/net6.0/refint/Flipkart.dll
+/src/Flipkart/Flipkart/obj/Debug/net6.0/ref/Flipkart.dll
