--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -1,6 +1,6 @@
 stages:
   - stage: Stage1
-    pool: ubuntu
+    pool: windows
     jobs:
       - job: Job1
         steps:
@@ -31,7 +31,7 @@ stages:
                 # Write your PowerShell commands here.
                 Write-Host "Hello World"
   - stage: Stage2
-    pool: ubuntu
+    pool: windows
     jobs:
       - job: Job1
         steps:
